@@ -529,6 +529,12 @@ define function, begin
 518,menuitemtrueslot,1,0         #slot no. of a menu item as it appears in Custom (menu item handle)
 519,getheroslice,1,0             #get the slice representing a hero walkabout
 520,getNPCslice,1,0              #get the slice representing an NPC walkabout
+521,getdoorx,1,0                 #x coordinate of given door
+522,getdoory,1,0                 #y coordinate of given door
+523,getdoordestinationid,1,0     #door id of given door's exit
+524,getdoordestinationmap,1,0    #map number of given door's exit
+525,doorisactive,1,0             #returns true if the given door has an active link
+526,readattackcaption,2,0,0      #puts an attack's caption in a string (string id, attack id+1 / attack .hsi constant)
 end
 
 #--------------------------------------------------------------------------
